# QIT-python

./: .gitignore  CHANGELOG.rst  CHANGELOG.txt  ChangeLog.txt  MANIFEST.in  README.rst  README.txt  __init__.py  base.py  examples.py  gate.py  ho.py  invariant.py  lmap.py  markov.py  plot.py  seq.py  setup.cfg  setup.py  state.py  utils.py
doc/: Makefile  conf.py  gate.rst  ho.rst  index.rst  invariant.rst  lmap.rst  macros.tex  refs.bib  seq.rst  utils.rst
docs/: api.rst  conf.py  plot.rst
qit/: __init__.py  base.py  examples.py  gate.py  hamiltonian.py  ho.py  invariant.py  lmap.py  markov.py  plot.py  seq.py  state.py  utils.py
src/qit/: __init__.py  examples.py  gate.py  hamiltonian.py  ho.py  invariant.py  lmap.py  markov.py  plot.py  seq.py  state.py  utils.py
test/: context.py  test_gate.py  test_ho.py  test_invariant.py  test_lmap.py  test_markov.py  test_seq.py  test_state.py  test_utils.py
tests/: conftest.py
