[metadata]
name = qit
description = Quantum Information Toolkit
author = Ville Bergholm et al.
author_email = smite-meister@users.sourceforge.net
license = GPLv3
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = http://qit.sourceforge.net/
project_urls =
    Documentation = http://qit.sourceforge.net/docs/html/
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
keywords = quantum information, quantum mechanics, toolkit

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    numpy ~= 1.20
    scipy ~= 1.6
    matplotlib ~= 3.4

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = ~= 3.9

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install qit[dev,docs]`
dev =
    pytest == 6.2.4
    pytest-cov == 2.12.1
    pytest-pylint == 0.18.0
    tox == 3.23.1
    build >= 0.4.0
docs =
    sphinx ~= 4.0.2
    sphinxcontrib-bibtex ~= 2.3

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     qit_tour = qit.examples:tour
